export type UserSummary = {
    id: string
    name: string
    email?: string
    telegramUserId?: string
}