package com.springboot.MyTodoList.model;

public enum WorkItemPriority {
    LOW,
    MEDIUM,
    HIGH
}
