@startuml

class AnalyticsDashboard {
	{method} +chartData () : List
	{method} +equals ( o : Object ) : boolean
	{method} +hashCode () : int
	{method} +kpis () : AnalyticsKpis
	{method} +toString () : String
}


class AnalyticsDebug {
	{field} -assignments : List
	{field} -timeEntries : List
	{field} -workItems : List
	{method} +assignments () : List
	{method} +equals ( o : Object ) : boolean
	{method} +hashCode () : int
	{method} +timeEntries () : List
	{method} +toString () : String
	{method} +workItems () : List
}


class AnalyticsKpis {
	{field} -avgHoursPerDev : double
	{field} -avgTasksPerDev : double
	{field} -totalHours : double
	{field} -totalTasks : long
	{method} +avgHoursPerDev () : double
	{method} +avgTasksPerDev () : double
	{method} +equals ( o : Object ) : boolean
	{method} +hashCode () : int
	{method} +toString () : String
	{method} +totalHours () : double
	{method} +totalTasks () : long
}


class AppUser {
	{field} +createdAt : OffsetDateTime
	{field} +email : String
	{field} +name : String
	{field} +passwordHash : String
	{field} +phoneNumber : String
	{field} +telegramUserId : String
	{field} +userId : String
	{method} +prePersist () : void
}


class AppUserSummary {
	{field} -email : String
	{field} -name : String
	{field} -telegramUserId : String
	{field} -userId : String
	{method} +email () : String
	{method} +equals ( o : Object ) : boolean
	{method} +hashCode () : int
	{method} +name () : String
	{method} +telegramUserId () : String
	{method} +toString () : String
	{method} +userId () : String
}


class AssignedUserDto {
	{field} -email : String
	{field} -name : String
	{field} -telegramUserId : String
	{field} -userId : String
	{method} +email () : String
	{method} +equals ( o : Object ) : boolean
	{method} +hashCode () : int
	{method} +name () : String
	{method} +telegramUserId () : String
	{method} +toString () : String
	{method} +userId () : String
}


class Assignee {
	{field} -assignmentId : String
}


class AuthResponse {
	{field} -token : String
	{method} +equals ( o : Object ) : boolean
	{method} +hashCode () : int
	{method} +toString () : String
	{method} +token () : String
	{method} +user () : UserProfileResponse
}


class CreateTagRequest {
	{field} +color : String
	{field} +description : String
	{field} +name : String
	{method} +toTag () : Tag
}


class CreateWorkItemRequest {
	{field} +assigneeIds : List
	{field} +completedAt : OffsetDateTime
	{field} +createdByUserId : String
	{field} +description : String
	{field} +dueDate : LocalDate
	{field} +estimatedMinutes : Integer
	{field} +externalLink : String
	{field} +sprintId : String
	{field} +status : String
	{field} +tagIds : List
	{field} +title : String
	{field} +workType : String
}


class DeveloperSprintAnalytics {
	{field} -developer : String
	{field} -sprint : String
	{field} -tasksCompleted : long
	{field} -totalHoursWorked : double
	{field} -userId : String
	{method} +developer () : String
	{method} +equals ( o : Object ) : boolean
	{method} +hashCode () : int
	{method} +legacyDeveloper () : String
	{method} +legacyRealHours () : double
	{method} +legacySprint () : String
	{method} +legacySprintName () : String
	{method} +legacyTasksCompleted () : long
	{method} +legacyTotalHoursWorked () : double
	{method} +legacyUserId () : String
	{method} +sprint () : String
	{method} +tasksCompleted () : long
	{method} +toString () : String
	{method} +totalHoursWorked () : double
	{method} +userId () : String
}


class LoginRequest {
	{field} +email : String
	{field} +password : String
}


class SemanticSearchRequest {
	{field} +maxResults : Integer
	{field} +query : String
}


class SemanticSearchResponse {
	{field} -relevanceScore : double
	{method} +equals ( o : Object ) : boolean
	{method} +hashCode () : int
	{method} +relevanceScore () : double
	{method} +toString () : String
	{method} +workItem () : WorkItemResponse
}


class SemanticSearchResultList {
	{field} -aiAvailable : boolean
	{field} -fallbackMessage : String
	{field} -query : String
	{field} -totalResults : int
	{method} +aiAvailable () : boolean
	{method} +equals ( o : Object ) : boolean
	{method}  {static} +fallback ( query : String , results : List , message : String ) : SemanticSearchResultList
	{method} +fallbackMessage () : String
	{method} +hashCode () : int
	{method} +query () : String
	{method} +results () : List
	{method}  {static} +success ( query : String , results : List ) : SemanticSearchResultList
	{method} +toString () : String
	{method} +totalResults () : int
}


class SignupRequest {
	{field} +email : String
	{field} +name : String
	{field} +password : String
}


class Sprint {
	{field} +createdAt : OffsetDateTime
	{field} +createdByUserId : String
	{field} +endDate : LocalDate
	{field} +goal : String
	{field} +name : String
	{field} +sprintId : String
	{field} +startDate : LocalDate
	{field} +status : String
	{field} +teamId : String
}


class SprintCreateRequest {
	{field} -createdByUserId : String
	{field} -endDate : LocalDate
	{field} -goal : String
	{field} -name : String
	{field} -sprintId : String
	{field} -startDate : LocalDate
	{field} -status : String
	{field} -teamId : String
	{method} +createdByUserId () : String
	{method} +endDate () : LocalDate
	{method} +equals ( o : Object ) : boolean
	{method} +goal () : String
	{method} +hashCode () : int
	{method} +name () : String
	{method} +sprintId () : String
	{method} +startDate () : LocalDate
	{method} +status () : String
	{method} +teamId () : String
	{method} +toString () : String
}


class SprintMapper {
	{method}  {static} +toEntity ( request : SprintCreateRequest ) : Sprint
	{method}  {static} +toResponse ( entity : Sprint ) : SprintResponse
}


class SprintResponse {
	{field} -createdAt : OffsetDateTime
	{field} -createdByUserId : String
	{field} -endDate : LocalDate
	{field} -goal : String
	{field} -name : String
	{field} -sprintId : String
	{field} -startDate : LocalDate
	{field} -status : String
	{field} -teamId : String
	{method} +createdAt () : OffsetDateTime
	{method} +createdByUserId () : String
	{method} +endDate () : LocalDate
	{method} +equals ( o : Object ) : boolean
	{method} +goal () : String
	{method} +hashCode () : int
	{method} +name () : String
	{method} +sprintId () : String
	{method} +startDate () : LocalDate
	{method} +status () : String
	{method} +teamId () : String
	{method} +toString () : String
}


class SprintVelocity {
	{field} -completedTasks : long
	{field} -endDate : String
	{field} -fulfillmentPct : double
	{field} -sprintId : String
	{field} -sprintName : String
	{field} -sprintStatus : String
	{field} -startDate : String
	{field} -totalTasks : long
	{method} +completedTasks () : long
	{method} +endDate () : String
	{method} +equals ( o : Object ) : boolean
	{method} +fulfillmentPct () : double
	{method} +hashCode () : int
	{method} +sprintId () : String
	{method} +sprintName () : String
	{method} +sprintStatus () : String
	{method} +startDate () : String
	{method} +toString () : String
	{method} +totalTasks () : long
}


class SprintVelocityRow {
	{field} -completedTasks : long
	{field} -endDate : String
	{field} -sprintId : String
	{field} -sprintName : String
	{field} -sprintStatus : String
	{field} -startDate : String
	{field} -totalTasks : long
	{method} +completedTasks () : long
	{method} +endDate () : String
	{method} +equals ( o : Object ) : boolean
	{method} +hashCode () : int
	{method} +sprintId () : String
	{method} +sprintName () : String
	{method} +sprintStatus () : String
	{method} +startDate () : String
	{method} +toString () : String
	{method} +totalTasks () : long
}


class Tag {
	{field} +color : String
	{field} +createdAt : OffsetDateTime
	{field} +description : String
	{field} +name : String
	{field} +tagId : String
}


class TagMapper {
	{method}  {static} +applyUpdates ( tag : Tag , request : UpdateTagRequest ) : void
	{method}  {static} +toResponse ( tag : Tag ) : TagResponse
}


class TagResponse {
	{field} +color : String
	{field} +description : String
	{field} +name : String
	{field} +tagId : UUID
}


class TimeEntry {
	{field} +createdAt : OffsetDateTime
	{field} +endedAt : OffsetDateTime
	{field} +id : String
	{field} +minutes : Integer
	{field} +note : String
	{field} +startedAt : OffsetDateTime
}


class TimeEntryRequest {
	{field} +minutes : Integer
	{field} +note : String
	{field} +userId : String
	{field} +workItemId : String
}


class TimeEntryResponse {
	{field} ~minutes : Integer
	{field} ~note : String
	{field} ~userId : String
	{field} ~workItemId : String
}


class UpdateProfileRequest {
	{field} +name : String
	{field} +password : String
	{field} +phoneNumber : String
	{field} +telegramUserId : String
}


class UpdateTagRequest {
	{field} +color : String
	{field} +description : String
	{field} +name : String
}


class UpdateWorkItemRequest {
	{field} +assigneeIds : List
	{field} +completedAt : OffsetDateTime
	{field} +description : String
	{field} +dueDate : LocalDate
	{field} +estimatedMinutes : Integer
	{field} +externalLink : String
	{field} +sprintId : String
	{field} +status : String
	{field} +tagIds : List
	{field} +title : String
	{field} +workType : String
}


class User {
	{field} +name : String
	{field} +phoneNumber : String
	{field} +telegramUserId : String
	{field} +userId : String
	{field} +userPassword : String
	{method} +prePersist () : void
}


class UserProfileResponse {
	{field} -email : String
	{field} -name : String
	{field} -phoneNumber : String
	{field} -telegramUserId : String
	{field} -userId : String
	{method} +email () : String
	{method} +equals ( o : Object ) : boolean
	{method} +hashCode () : int
	{method} +name () : String
	{method} +phoneNumber () : String
	{method} +telegramUserId () : String
	{method} +toString () : String
	{method} +userId () : String
}


class UserSummary {
	{field} -id : String
	{field} -name : String
	{method} +equals ( o : Object ) : boolean
	{method} +hashCode () : int
	{method} +id () : String
	{method} +name () : String
	{method} +toString () : String
}


class VelocityAnalytics {
	{field} -overallPct : double
	{field} -target : double
	{method} +equals ( o : Object ) : boolean
	{method} +hashCode () : int
	{method} +overallPct () : double
	{method} +sprints () : List
	{method} +target () : double
	{method} +toString () : String
}


class WorkItem {
	{field} +completedAt : OffsetDateTime
	{field} +createdAt : OffsetDateTime
	{field} +createdByUserId : String
	{field} +description : String
	{field} +dueDate : LocalDate
	{field} +estimatedMinutes : Integer
	{field} +externalLink : String
	{field} +sprintId : String
	{field} +status : String
	{field} +title : String
	{field} +updatedAt : OffsetDateTime
	{field} +workItemId : String
	{field} +workType : String
}


class WorkItemAssignment {
	{field} +assignedAt : OffsetDateTime
	{field} +assignmentId : String
	{field} +assignmentRole : String
	{field} +unassignedAt : OffsetDateTime
}


class WorkItemAssignmentDto {
	{field} -assignedAt : OffsetDateTime
	{field} -assignmentId : String
	{field} -assignmentRole : String
	{field} -unassignedAt : OffsetDateTime
	{method} +assignedAt () : OffsetDateTime
	{method} +assignedBy () : AssignedUserDto
	{method} +assignmentId () : String
	{method} +assignmentRole () : String
	{method} +equals ( o : Object ) : boolean
	{method} +hashCode () : int
	{method} +toString () : String
	{method} +unassignedAt () : OffsetDateTime
	{method} +user () : AssignedUserDto
}


class WorkItemMapper {
	{method}  {static} +applyUpdates ( workItem : WorkItem , request : UpdateWorkItemRequest ) : void
	{method}  {static} +fromCreateRequest ( request : CreateWorkItemRequest ) : WorkItem
	{method}  {static} +toAssignmentDto ( assignment : WorkItemAssignment ) : WorkItemAssignmentDto
	{method}  {static} +toResponse ( entity : WorkItem ) : WorkItemResponse
	{method}  {static} +toTagDto ( tag : WorkItemTag ) : TagResponse
	{method}  {static} -toUserDto ( user : AppUser ) : AssignedUserDto
}


enum WorkItemPriority {
	{field} +HIGH
	{field} +LOW
	{field} +MEDIUM
}


class WorkItemResponse {
	{field} -completedAt : OffsetDateTime
	{field} -createdAt : OffsetDateTime
	{field} -createdByUserId : String
	{field} -description : String
	{field} -dueDate : LocalDate
	{field} -estimatedMinutes : Integer
	{field} -externalLink : String
	{field} -priority : String
	{field} -sprintId : String
	{field} -status : String
	{field} -title : String
	{field} -updatedAt : OffsetDateTime
	{field} -workItemId : String
	{field} -workType : String
	{method} +assignees () : List
	{method} +completedAt () : OffsetDateTime
	{method} +createdAt () : OffsetDateTime
	{method} +createdByUserId () : String
	{method} +description () : String
	{method} +dueDate () : LocalDate
	{method} +equals ( o : Object ) : boolean
	{method} +estimatedMinutes () : Integer
	{method} +externalLink () : String
	{method} +hashCode () : int
	{method} +priority () : String
	{method} +sprintId () : String
	{method} +status () : String
	{method} +tags () : List
	{method} +title () : String
	{method} +toString () : String
	{method} +updatedAt () : OffsetDateTime
	{method} +workItemId () : String
	{method} +workType () : String
}


class WorkItemTag {
	{field} +createdAt : LocalDateTime
	{method} #onCreate () : void
}


class WorkItemTagId {
	{field} +tagId : String
	{field} +workItemId : String
	{method} +equals ( o : Object ) : boolean
	{method} +hashCode () : int
}




AnalyticsDashboard "1" o-- "0..*"  DeveloperSprintAnalytics : chartData
AnalyticsDashboard *--  AnalyticsKpis : kpis
Assignee -->  User :  @OneToOne\nuser
AuthResponse *--  UserProfileResponse : user
CreateWorkItemRequest -->  WorkItemPriority : priority
SemanticSearchResponse *--  WorkItemResponse : workItem
SemanticSearchResultList "1" o-- "0..*"  SemanticSearchResponse : results
TimeEntry -->  AppUser :  @ManyToOne\nuser
TimeEntry -->  WorkItem :  @ManyToOne\nworkItem
UpdateWorkItemRequest -->  WorkItemPriority : priority
VelocityAnalytics "1" o-- "0..*"  SprintVelocity : sprints
WorkItem "1" o-- "0..*"  TimeEntry : timeEntries
WorkItem "1" o-- "0..*"  WorkItemAssignment : assignments
WorkItem "1" o-- "0..*"  WorkItemTag : tags
WorkItem -->  WorkItemPriority :  @Column("PRIORITY")\npriority
WorkItemAssignment -->  AppUser :  @ManyToOne\nassignedByUser
WorkItemAssignment -->  AppUser :  @ManyToOne\nassignedUser
WorkItemAssignment -->  WorkItem :  @ManyToOne\nworkItem
WorkItemAssignmentDto *--  AssignedUserDto : assignedBy
WorkItemAssignmentDto *--  AssignedUserDto : user
WorkItemResponse "1" o-- "0..*"  TagResponse : tags
WorkItemResponse "1" o-- "0..*"  WorkItemAssignmentDto : assignees
WorkItemTag -->  Tag :  @ManyToOne\ntag
WorkItemTag -->  WorkItem :  @ManyToOne\nworkItem
WorkItemTag -->  WorkItemTagId : id

hide fields
hide methods

@enduml